--- a/Web/Resources/Pages/Index.fr.resx
+++ b/Web/Resources/Pages/Index.fr.resx
@@ -127,7 +127,7 @@
     <value>Courriel</value>
   </data>
   <data name="emaillink" xml:space="preserve">
-    <value>mailto:?to=%20&amp;body=https://www.ccg-cct.azure.cloud.dfo-mpo.gc.ca/fr/Index%20&amp;subject=Garde%20côtière%20canadienne%20L’outil%20de%20compétences%20professionnelles</value>
+    <value>mailto:?to=%20&amp;body=https://ccg-cct.azure.cloud.dfo-mpo.gc.ca/fr/Index%20&amp;subject=Garde%20côtière%20canadienne%20L’outil%20de%20compétences%20professionnelles</value>
   </data>
   <data name="external" xml:space="preserve">
     <value>Candidat externe</value>
@@ -136,7 +136,7 @@
     <value>Si vous êtes un candidat externe, vous pouvez commencer votre recherche ici.</value>
   </data>
   <data name="facebooklink" xml:space="preserve">
-    <value>https://www.facebook.com/sharer.php?u=https://www.ccg-cct.azure.cloud.dfo-mpo.gc.ca/fr/Index&amp;t=Garde%20côtière%20canadienne%20L’outil%20de%20compétences%20professionnelles</value>
+    <value>https://www.facebook.com/sharer.php?u=https://ccg-cct.azure.cloud.dfo-mpo.gc.ca/fr/Index&amp;t=Garde%20côtière%20canadienne%20L’outil%20de%20compétences%20professionnelles</value>
   </data>
   <data name="feedback" xml:space="preserve">
     <value>Rétroaction</value>
@@ -157,7 +157,7 @@
     <value>Il s’adresse aux employés actuels de la Garde côtière et aux personnes qui souhaiteraient travailler pour la Garde côtière canadienne. Pour les membres de la Garde côtière, l’outil vous permet de prendre en main votre perfectionnement professionnel.</value>
   </data>
   <data name="linkedinlink" xml:space="preserve">
-    <value>https://www.linkedin.com/shareArticle?mini=true&amp;url=https://www.ccg-cct.azure.cloud.dfo-mpo.gc.ca/fr/Index&amp;title=Garde%20côtière%20canadienne%20L’outil%20de%20compétences%20professionnelles&amp;ro=false&amp;summary=&amp;source=</value>
+    <value>https://www.linkedin.com/shareArticle?mini=true&amp;url=https://ccg-cct.azure.cloud.dfo-mpo.gc.ca/fr/Index&amp;title=Garde%20côtière%20canadienne%20L’outil%20de%20compétences%20professionnelles&amp;ro=false&amp;summary=&amp;source=</value>
   </data>
   <data name="member" xml:space="preserve">
     <value>Membre de la Garde côtière</value>
@@ -193,6 +193,6 @@
     <value>Si vous êtes étudiant, vous pouvez commencer votre recherche ici.</value>
   </data>
   <data name="twitterlink" xml:space="preserve">
-    <value>https://twitter.com/intent/tweet?text=Garde%20côtière%20canadienne%20L’outil%20de%20compétences%20professionnelles&amp;url=https://www.ccg-cct.azure.cloud.dfo-mpo.gc.ca/fr/Index</value>
+    <value>https://twitter.com/intent/tweet?text=Garde%20côtière%20canadienne%20L’outil%20de%20compétences%20professionnelles&amp;url=https://ccg-cct.azure.cloud.dfo-mpo.gc.ca/fr/Index</value>
   </data>
 </root>
