--- a/Web/Resources/Pages/Index.resx
+++ b/Web/Resources/Pages/Index.resx
@@ -121,7 +121,7 @@
     <value>A brief overview of the Career Competency Tool.</value>
   </data>
   <data name="emaillink" xml:space="preserve">
-    <value>mailto:?to=%20&amp;body=https://www.ccg-cct.azure.cloud.dfo-mpo.gc.ca/en/Index%20&amp;subject=Canadian%20Coast%20Guard%20Career%20Competency%20Tool</value>
+    <value>mailto:?to=%20&amp;body=https://ccg-cct.azure.cloud.dfo-mpo.gc.ca/en/Index%20&amp;subject=Canadian%20Coast%20Guard%20Career%20Competency%20Tool</value>
   </data>
   <data name="external" xml:space="preserve">
     <value>External Candidate</value>
@@ -130,7 +130,7 @@
     <value>If you are an external candidate, you can begin your search here.</value>
   </data>
   <data name="facebooklink" xml:space="preserve">
-    <value>https://www.facebook.com/sharer.php?u=https://www.ccg-cct.azure.cloud.dfo-mpo.gc.ca/en/Index&amp;t=Canadian%20Coast%20Guard%20Career%20Competency%20Tool</value>
+    <value>https://www.facebook.com/sharer.php?u=https://ccg-cct.azure.cloud.dfo-mpo.gc.ca/en/Index&amp;t=Canadian%20Coast%20Guard%20Career%20Competency%20Tool</value>
   </data>
   <data name="feedback" xml:space="preserve">
     <value>Feedback</value>
@@ -151,7 +151,7 @@
     <value>The tool is for both existing coast guard employees and those interested in working for the Canadian Coast Guard. For coast guard members, the tool empowers you to take charge of your own career development.</value>
   </data>
   <data name="linkedinlink" xml:space="preserve">
-    <value>https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Fwww.ccg-cct.azure.cloud.dfo-mpo.gc.ca%2Fen%2FIndex&amp;title=Canadian%20Coast%20Guard%20Career%20Competency%20Tool&amp;ro=false&amp;summary=&amp;source=</value>
+    <value>https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Fccg-cct.azure.cloud.dfo-mpo.gc.ca%2Fen%2FIndex&amp;title=Canadian%20Coast%20Guard%20Career%20Competency%20Tool&amp;ro=false&amp;summary=&amp;source=</value>
   </data>
   <data name="member" xml:space="preserve">
     <value>Coast Guard Member</value>
@@ -187,6 +187,6 @@
     <value>If you are a student, you can begin your search here.</value>
   </data>
   <data name="twitterlink" xml:space="preserve">
-    <value>https://twitter.com/intent/tweet?text=Canadian%20Coast%20Guard%20Career%20Competency%20Tool&amp;url=https://www.ccg-cct.azure.cloud.dfo-mpo.gc.ca/en/Index</value>
+    <value>https://twitter.com/intent/tweet?text=Canadian%20Coast%20Guard%20Career%20Competency%20Tool&amp;url=https://ccg-cct.azure.cloud.dfo-mpo.gc.ca/en/Index</value>
   </data>
 </root>
