All PDF buttons hidden

--- a/Web/Resources/Pages/Index.fr.resx
+++ b/Web/Resources/Pages/Index.fr.resx
@@ -160,7 +160,7 @@
     <value>https://www.linkedin.com/shareArticle?mini=true&amp;url=https://ccg-cct.azure.cloud.dfo-mpo.gc.ca/fr/Index&amp;title=Garde%20côtière%20canadienne%20L’outil%20de%20compétences%20professionnelles&amp;ro=false&amp;summary=&amp;source=</value>
   </data>
   <data name="member" xml:space="preserve">
-    <value>Membre de la Garde côtière</value>
+    <value>Membre de la GCC</value>
   </data>
   <data name="membersearch" xml:space="preserve">
     <value>Si vous êtes membre de la &lt;abbr title="Garde côtière canadienne"&gt;GCC&lt;/abbr&gt;, vous pouvez commencer votre recherche ici.</value>
