--- a/Web/Resources/Pages/Index.resx
+++ b/Web/Resources/Pages/Index.resx
@@ -154,7 +154,7 @@
     <value>https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Fccg-cct.azure.cloud.dfo-mpo.gc.ca%2Fen%2FIndex&amp;title=Canadian%20Coast%20Guard%20Career%20Competency%20Tool&amp;ro=false&amp;summary=&amp;source=</value>
   </data>
   <data name="member" xml:space="preserve">
-    <value>Coast Guard Member</value>
+    <value>CCG Member</value>
   </data>
   <data name="membersearch" xml:space="preserve">
     <value>If you are a &lt;abbr title="Canadian Coast Guard"&gt;CCG&lt;/abbr&gt; member, you can begin your search here.</value>
