--- a/Web/Resources/Pages/Candidate/Seagoing/Common/Details.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Common/Details.resx
@@ -150,6 +150,9 @@
   <data name="contsimilar" xml:space="preserve">
     <value>Continue to Similar Search</value>
   </data>
+  <data name="curdetails" xml:space="preserve">
+    <value>Current Position Details</value>
+  </data>
   <data name="Current Position" xml:space="preserve">
     <value>Current position details</value>
   </data>
@@ -217,7 +220,7 @@
     <value>RATES OF PAY:</value>
   </data>
   <data name="RoPtext" xml:space="preserve">
-    <value>To review rates of pay for all classifications listed in the &lt;abbr title="Career Competency Tool"&gt;CCT&lt;/abbr&gt;, visit the website of the  &lt;a href="https://www.tbs-sct.gc.ca/pubs_pol/hrpubs/coll_agre/rates-taux-eng.asp" target="_blank"&gt;Treasury Board of Canada Secretariat&lt;/a&gt;&amp;nbsp;&lt;span style="color:#000; font-size:14px" class="glyphicon glyphicon-new-window"&gt;&lt;/span&gt;.</value>
+    <value>To review rates of pay for all classifications listed in the Career Competency Tool (CCT), visit the website of the  &lt;a href="https://www.tbs-sct.gc.ca/pubs_pol/hrpubs/coll_agre/rates-taux-eng.asp" target="_blank"&gt;Treasury Board of Canada Secretariat&lt;/a&gt;&amp;nbsp;&lt;span style="color:#000; font-size:14px" class="glyphicon glyphicon-new-window"&gt;&lt;/span&gt;.</value>
   </data>
   <data name="save" xml:space="preserve">
     <value>Print or download this page as a PDF document</value>
